<resources>
    <string name="app_name">Test</string>
    <string name="prompt_username">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">SignIn</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome">Welcome</string>
    <string name="string_remember">Remember</string>
    <string name="credentialSaved">Credentials Saved</string>
    <string name="title_activity_order">Orders</string>
    <string name="button_submit">Submit</string>
    <string name="button_location">Get Location</string>
    <string name="hint_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_order_count">Order Count</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_purchase_date">Order Due Date</string>
    <string name="lable_location">Location</string>
</resources>
