<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="eventListener"
            type="com.example.logintest.events.EventListeners.OrderEvents" />

        <variable
            name="order"
            type="com.example.logintest.data.model.order.Orders" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <EditText
            android:id="@+id/editTextName"
            style="@style/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:maxLines="1"
            android:text="@{order.customerName}"
            app:layout_constraintBottom_toTopOf="@+id/editTextAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextAddress"
            style="@style/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address"
            android:maxLines="2"
            android:text="@{order.customerAddress}"
            app:layout_constraintBottom_toTopOf="@+id/editTextContact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/editTextContact"
            style="@style/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mobile_number"
            android:inputType="phone"
            android:text="@{order.customerPhone}"
            app:layout_constraintBottom_toTopOf="@+id/editTextCount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

        <EditText
            android:id="@+id/editTextCount"
            style="@style/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_order_count"
            android:inputType="number"
            android:text="@{order.noOfOrders}"
            app:layout_constraintBottom_toTopOf="@+id/textViewDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextContact" />

        <TextView
            android:id="@+id/textViewDate"
            style="@style/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_purchase_date"
            android:onClick="@{()->eventListener.onPurchaseDate()}"
            android:orientation="horizontal"
            android:text="@{order.orderDueDate}"
            app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCount" />

        <Button
            android:id="@+id/buttonSubmit"
            style="@style/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_submit"
            android:onClick="@{()->eventListener.onSubmit()}"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>